# pixshare

./: .gitignore  .pre-commit-config.yaml  .python-version  README.md  conftest.py  env  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: nox-audit_multi-arch.yml  nox-coverage.yml  nox-lint_multi-arch.yml  nox-safety_multi-arch.yml
account/: models.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_contact.py
accounts/: authentication.py  forms.py  urls.py  views.py
actions/: models.py  utils.py
actions/migrations/: 0001_initial.py
config/: settings.py  urls.py
docs/: changelog.rst  conf.py  contributing.rst  create_new_users.rst  features.rst  index.rst  installing.rst  package_index.rst  testing.rst
htmlcov/: class_index.html  coverage.json  d_051dcf22948e5c16_admin_py.html  d_051dcf22948e5c16_apps_py.html  d_051dcf22948e5c16_models_py.html  d_051dcf22948e5c16_utils_py.html  d_051dcf22948e5c16_views_py.html  d_15eb941870a4f5f1_admin_py.html  d_15eb941870a4f5f1_apps_py.html  d_15eb941870a4f5f1_authentication_py.html  d_15eb941870a4f5f1_forms_py.html  d_15eb941870a4f5f1_models_py.html  d_15eb941870a4f5f1_urls_py.html  d_15eb941870a4f5f1_views_py.html  d_1ea838694151cac8_test_py.html  d_1ea838694151cac8_urls_py.html  d_36c34a06426a17e7_test_forms_py.html  d_36c34a06426a17e7_test_models_py.html  d_36c34a06426a17e7_test_urls_py.html  d_36c34a06426a17e7_test_views_py.html  d_b8c767d1f0d3f985_test_forms_py.html  d_b8c767d1f0d3f985_test_models_py.html  d_b8c767d1f0d3f985_test_urls_py.html  d_b8c767d1f0d3f985_test_views_py.html  function_index.html  index.html  status.json  z_051dcf22948e5c16_admin_py.html  z_051dcf22948e5c16_apps_py.html  z_051dcf22948e5c16_models_py.html  z_051dcf22948e5c16_utils_py.html  z_051dcf22948e5c16_views_py.html  z_15eb941870a4f5f1_admin_py.html  z_15eb941870a4f5f1_apps_py.html  z_15eb941870a4f5f1_authentication_py.html  z_15eb941870a4f5f1_forms_py.html  z_15eb941870a4f5f1_models_py.html  z_15eb941870a4f5f1_urls_py.html  z_15eb941870a4f5f1_views_py.html  z_1ea838694151cac8_test_py.html  (+9 more)
images/: forms.py  models.py  urls.py  views.py
images/migrations/: 0001_initial.py  0002_image_total_likes_and_more.py
static/css/: base.css  bookmarklet.css
static/js/: bookmarklet.js
templates/: base.html  bookmarklet_launcher.js
templates/account/: dashboard.html  register.html  register_done.html
templates/account/user/: detail.html  list.html
templates/accounts/: dashboard.html  edit.html  login.html
templates/action/: detail.html
templates/images/image/: create.html  detail.html  list.html  list_images.html  ranking.html
templates/registration/: logged_out.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
